增加lottie动画框架使用的Demo

--- a/app/src/main/res/layout/activity_android_animation.xml
+++ b/app/src/main/res/layout/activity_android_animation.xml
@@ -26,4 +26,12 @@
         android:layout_height="wrap_content"
         android:text="属性动画" />
 
+    <Button
+        android:id="@+id/bt_lottie"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Lottie动画框架" />
+
+
+
 </LinearLayout>
