--- a/app/src/main/res/layout/activity_huan_xing_jin_du.xml
+++ b/app/src/main/res/layout/activity_huan_xing_jin_du.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="200dp"
         android:visibility="visible"
         app:antiAlias="true"
-        app:arcColors="@color/colorAccent"
+        app:arcColors="@color/blue"
         app:arcWidth="2dp"
         app:bgArcColor="#EBEBEB"
         app:bgArcWidth="2dp"
