--- a/app/src/main/res/layout/activity_android_animation.xml
+++ b/app/src/main/res/layout/activity_android_animation.xml
@@ -31,6 +31,12 @@
         android:layout_height="wrap_content"
         android:background="@color/white"
         android:text="属性动画" />
+    <Button
+        android:id="@+id/bt_piaoliuping"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/white"
+        android:text="漂流瓶效果" />
 
     <Button
         android:id="@+id/bt_lottie"
