--- a/app/src/main/res/layout/activity_shu_xing_anim.xml
+++ b/app/src/main/res/layout/activity_shu_xing_anim.xml
@@ -46,6 +46,12 @@
         android:textColor="@color/blue"
         android:textSize="20sp" />
 
+
+    <com.example.lmy.customview.Animation.ScrollingDigitalAnimation
+        android:id="@+id/tv_donghua"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <ImageView
         android:id="@+id/iv_image"
         android:layout_width="wrap_content"
